--- a/praktikum/05_kontrollstrukturen/05_kontrollstrukturen.ipynb
+++ b/praktikum/05_kontrollstrukturen/05_kontrollstrukturen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -90,9 +90,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sie sind 21 Jahre jung.\n",
+      "Der Typ von alter ist: <class 'int'>\n"
+     ]
+    }
+   ],
    "source": [
     "alter_string = input(\"Bitte geben Sie Ihr Alter ein: \")\n",
     "alter_int = int(alter_string)\n",
@@ -138,13 +147,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fehler, bitte geben Sie eine Zahl zwischen 1 und 3 ein!\n"
+     ]
+    }
+   ],
    "source": [
-    "..."
+    "Auswahl_string = input(\"Bitte geben Sie eine Zahl zwischen 1 und 3 ein: \")\n",
+    "Auswahl_int = int(Auswahl_string)\n",
+    "if Auswahl_int in (1, 2, 3):\n",
+    "    print(f\"Sie haben {Auswahl_int} gewählt\")\n",
+    "else:\n",
+    "    print(f\"Fehler, bitte geben Sie eine Zahl zwischen 1 und 3 ein!\")\n"
    ]
   },
   {
@@ -167,15 +189,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Falsche Eingabe\n",
+      "Falsche Eingabe\n",
+      "Sie haben 3 gewählt\n"
+     ]
+    }
+   ],
    "source": [
     "choice = None\n",
     "\n",
-    "..."
+    "while True:\n",
+    "    Auswahl_string = input(\"Bitte geben Sie eine Zahl zwischen 1 und 3 ein: \")\n",
+    "    Auswahl_int = int(Auswahl_string)\n",
+    "    if Auswahl_int in (1, 2, 3):\n",
+    "        print(f\"Sie haben {Auswahl_int} gewählt\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(f\"Falsche Eingabe\")"
    ]
   },
   {
@@ -194,13 +233,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fehler, bitte wählen Sie jeweils eine gültige Option\n",
+      "Fehler, bitte wählen Sie jeweils eine gültige Option\n",
+      "Fehler, bitte wählen Sie jeweils eine gültige Option\n",
+      "Fehler, bitte wählen Sie jeweils eine gültige Option\n",
+      "Sie haben die Vorspeise 0 gewählt\n",
+      "Sie haben die Hauptspeise 0 gewählt\n",
+      "Sie haben die Nachspeise 0 gewählt\n"
+     ]
+    }
+   ],
    "source": [
-    "..."
+    "Gerichte_string = (\"Vorspeise\", \"Hauptspeise\", \"Nachspeise\")\n",
+    "for Gericht in Gerichte:\n",
+    "    while True:\n",
+    "        Eingabe = input(f\"Bitte wählen Sie eine {Gericht}-Option 0-3 aus: \")\n",
+    "        if Eingabe in (\"0\", \"1\", \"2\", \"3\"):\n",
+    "            print(f\"Sie haben die {Gericht} {Eingabe} gewählt\")\n",
+    "            break\n",
+    "        else:\n",
+    "            print(f\"Fehler, bitte wählen Sie jeweils eine gültige Option\")"
    ]
   },
   {
@@ -216,9 +277,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1) Suppe\n",
+      "2) keine Vorspeise\n"
+     ]
+    }
+   ],
    "source": [
     "vorspeisen = [\"Suppe\", \"keine Vorspeise\"]\n",
     "for index, vorspeise in enumerate(vorspeisen):\n",
@@ -239,13 +309,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Möglichkeiten für Vorspeise: \n",
+      "0) Suppe\n",
+      "1) Salat\n",
+      "2) Brot\n",
+      "3) keine Vorspeise\n",
+      "Sie haben die Vorspeise Salat gewählt\n",
+      "Möglichkeiten für Hauptspeise: \n",
+      "0) Fleisch\n",
+      "1) Vegetarisch\n",
+      "2) Vegan\n",
+      "3) keine Hauptspeise\n",
+      "Sie haben die Hauptspeise Vegetarisch gewählt\n",
+      "Möglichkeiten für Nachspeise: \n",
+      "0) Süßes\n",
+      "1) Obst\n",
+      "2) Kaffee\n",
+      "3) keine Nachspeise\n",
+      "Sie haben die Nachspeise Obst gewählt\n"
+     ]
+    }
+   ],
    "source": [
-    "..."
+    "Gerichte = {\"Vorspeise\" : [\"Suppe\", \"Salat\", \"Brot\", \"keine Vorspeise\"],\n",
+    "            \"Hauptspeise\": [\"Fleisch\", \"Vegetarisch\", \"Vegan\", \"keine Hauptspeise\"],\n",
+    "            \"Nachspeise\" : [\"Süßes\", \"Obst\", \"Kaffee\", \"keine Nachspeise\"]}\n",
+    "for Gericht, Optionen in Gerichte.items():\n",
+    "    print(f\"Möglichkeiten für {Gericht}: \")\n",
+    "    for index, Option in enumerate(Optionen):\n",
+    "        print(f\"{index}) {Option}\")\n",
+    "    while True:\n",
+    "        Optionen_Anzahl = len(Optionen) - 1\n",
+    "        Eingabe = input(f\"Bitte wählen Sie eine{Gericht}-Option (0 - {Optionen_Anzahl}): \")\n",
+    "        if Eingabe.isdigit():\n",
+    "            Eingabe = int(Eingabe)\n",
+    "            if 0 <= Eingabe <= Optionen_Anzahl:\n",
+    "                print(f\"Sie haben die {Gericht} {Optionen[Eingabe]} gewählt\")\n",
+    "                break\n",
+    "            else:\n",
+    "                print(f\"Fehler, bitte wählen Sie eine gültige Option: 0 bis {Optionen_Anzahl}\")\n",
+    "        else:\n",
+    "            print(\"Fehler, bitte geben Sie eine Zahl ein.\")\n",
+    "            "
    ]
   },
   {
@@ -274,14 +388,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Möglichkeiten für Vorspeise: \n",
+      "0) Suppe\n",
+      "1) Salat\n",
+      "2) Brot\n",
+      "3) keine Vorspeise\n",
+      "Sie haben die Vorspeise keine Vorspeise gewählt\n",
+      "Möglichkeiten für Hauptspeise: \n",
+      "0) Fleisch\n",
+      "1) Vegetarisch\n",
+      "2) Vegan\n",
+      "3) keine Hauptspeise\n",
+      "Sie haben die Hauptspeise keine Hauptspeise gewählt\n",
+      "Möglichkeiten für Nachspeise: \n",
+      "0) Süßes\n",
+      "1) Obst\n",
+      "2) Kaffee\n",
+      "3) keine Nachspeise\n",
+      "Sie haben die Nachspeise keine Nachspeise gewählt\n",
+      "Sie haben wohl keinen Hunger. Vielleicht sehen wir uns später nochmal.\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "..."
+    "Gerichte = {\"Vorspeise\": [\"Suppe\", \"Salat\", \"Brot\", \"keine Vorspeise\"],\n",
+    "            \"Hauptspeise\": [\"Fleisch\", \"Vegetarisch\", \"Vegan\", \"keine Hauptspeise\"],\n",
+    "            \"Nachspeise\": [\"Süßes\", \"Obst\", \"Kaffee\", \"keine Nachspeise\"]}\n",
+    "Auswahl = []\n",
+    "for Gericht, Optionen in Gerichte.items():\n",
+    "    print(f\"Möglichkeiten für {Gericht}: \")\n",
+    "    for index, Option in enumerate(Optionen):\n",
+    "        print(f\"{index}) {Option}\")\n",
+    "    while True:\n",
+    "        Optionen_Anzahl = len(Optionen) - 1\n",
+    "        Eingabe = input(f\"Bitte wählen Sie eine {Gericht}-Option (0-{Optionen_Anzahl}): \")\n",
+    "        if Eingabe.isdigit():\n",
+    "            Eingabe = int(Eingabe)\n",
+    "            if 0 <= Eingabe <= Optionen_Anzahl:\n",
+    "                print(f\"Sie haben die {Gericht} {Optionen[Eingabe]} gewählt\")\n",
+    "                Auswahl.append(Optionen[Eingabe])\n",
+    "                break\n",
+    "            else:\n",
+    "                print(f\"Fehler, bitte wählen Sie eine gültige Option: 0 bis {Optionen_Anzahl}\")\n",
+    "        else:\n",
+    "            print(\"Fehler, bitte geben Sie eine Zahl ein.\")\n",
+    "if \"keine Vorspeise\" in Auswahl and \"keine Hauptspeise\" in Auswahl and \"keine Nachspeise\" in Auswahl:\n",
+    "    print(\"Sie haben wohl keinen Hunger. Vielleicht sehen wir uns später nochmal.\")\n",
+    "else:\n",
+    "    print(\"Hunger ist der beste Koch!\")\n",
+    "\n"
    ]
   },
   {
@@ -298,12 +462,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "c)\n"
+     ]
+    }
+   ],
    "source": [
     "buchstaben = [\"a)\", \"b)\", \"c)\", \"d)\"]\n",
     "\n",
@@ -324,13 +497,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Möglichkeiten für Vorspeise: \n",
+      "0) Suppe\n",
+      "1) Salat\n",
+      "2) Brot\n",
+      "3) keine Vorspeise\n",
+      "Sie haben die Vorspeise Brot gewählt\n",
+      "Möglichkeiten für Hauptspeise: \n",
+      "0) Fleisch\n",
+      "1) Vegetarisch\n",
+      "2) Vegan\n",
+      "3) keine Hauptspeise\n",
+      "Sie haben die Hauptspeise keine Hauptspeise gewählt\n",
+      "Möglichkeiten für Nachspeise: \n",
+      "0) Süßes\n",
+      "1) Obst\n",
+      "2) Kaffee\n",
+      "3) keine Nachspeise\n",
+      "Sie haben die Nachspeise Obst gewählt\n",
+      "Ihre Bestellung: 0) Brot, 1) Obst\n"
+     ]
+    }
+   ],
    "source": [
-    "..."
+    "Gerichte = {\"Vorspeise\": [\"Suppe\", \"Salat\", \"Brot\", \"keine Vorspeise\"],\"Hauptspeise\": [\"Fleisch\", \"Vegetarisch\", \"Vegan\", \"keine Hauptspeise\"],\"Nachspeise\": [\"Süßes\", \"Obst\", \"Kaffee\", \"keine Nachspeise\"]}\n",
+    "Auswahl = []\n",
+    "for Gericht, Optionen in Gerichte.items():\n",
+    "    print(f\"Möglichkeiten für {Gericht}: \")\n",
+    "    for index, Option in enumerate(Optionen):\n",
+    "        print(f\"{index}) {Option}\")\n",
+    "    while True:\n",
+    "        Optionen_Anzahl = len(Optionen) - 1\n",
+    "        Eingabe = input(f\"Bitte wählen Sie eine {Gericht}-Option (0-{Optionen_Anzahl}): \")\n",
+    "        if Eingabe.isdigit():\n",
+    "            Eingabe = int(Eingabe)\n",
+    "            if 0 <= Eingabe <= Optionen_Anzahl:\n",
+    "                print(f\"Sie haben die {Gericht} {Optionen[Eingabe]} gewählt\")\n",
+    "                Auswahl.append(Optionen[Eingabe])\n",
+    "                break\n",
+    "            else:\n",
+    "                print(f\"Fehler, bitte wählen Sie eine gültige Option: 0 bis {Optionen_Anzahl}\")\n",
+    "        else:\n",
+    "            print(\"Fehler, bitte geben Sie eine Zahl ein.\")\n",
+    "bestellte_gerichte = [gericht for gericht in Auswahl if not gericht.startswith(\"keine\")]\n",
+    "if not bestellte_gerichte:\n",
+    "    print(\"Sie haben wohl keinen Hunger. Vielleicht sehen wir uns später nochmal.\")\n",
+    "else:\n",
+    "    bestellungszusammenfassung = \", \".join([f\"{index}) {gericht}\" for index, gericht in enumerate(bestellte_gerichte)])\n",
+    "    print(f\"Ihre Bestellung: {bestellungszusammenfassung}\")\n"
    ]
   },
   {
@@ -401,7 +624,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   },
   "otter": {
    "OK_FORMAT": false,
