--- a/vorlesung/01_VL_Variablen/CT_1.ipynb
+++ b/vorlesung/01_VL_Variablen/CT_1.ipynb
@@ -294,7 +294,8 @@
    "source": [
     "# Fehlersuche mit type(), TypeError, Typumwandlung\n",
     "\n",
-    "# Gleitkommazahlen, komplexe Zahlen (1+2j), boolsche Werte (not/and/nor)\n"
+    "# Gleitkommazahlen, komplexe Zahlen (1+2j), boolsche Werte (not/and/nor)\n",
+    "alter = \n"
    ]
   },
   {
@@ -400,23 +401,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0b10 0b100\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "2"
+       "4"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +419,20 @@
     "# Bitoperationen (Verwenden von bin() und hex())\n",
     "\n",
     "x = 2\n",
-    "y = 4\n",
+    "y = 8\n",
+    "\n",
+    "hex(y)\n",
+    "\n",
+    "#0010\n",
+    "#1000 AND\n",
+    "#\n",
+    "\n",
+    "\n",
+    "x = x << 2\n",
+    "y = y >> 1\n",
+    "y\n",
+    "\n",
+    "\n",
     "\n",
     "\n"
    ]
@@ -462,9 +469,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n Ho\n"
+     ]
+    }
+   ],
    "source": [
     "# String erzeugen, ausgeben\n",
     "\n",
@@ -921,7 +936,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.5"
   },
   "vscode": {
    "interpreter": {
