--- a/vorlesung/02_VL_Kontrollstrukturen/CT_2.ipynb
+++ b/vorlesung/02_VL_Kontrollstrukturen/CT_2.ipynb
@@ -2,9 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'control-structures.ipynb'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/nbformat/__init__.py:166\u001b[0m, in \u001b[0;36mread\u001b[0;34m(fp, as_version, capture_validation_error, **kwargs)\u001b[0m\n\u001b[1;32m    165\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 166\u001b[0m     buf \u001b[39m=\u001b[39m fp\u001b[39m.\u001b[39mread()\n\u001b[1;32m    167\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m:\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'read'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/sterk/Documents/GitHub/ct_ws2023_students/vorlesung/02_VL_Kontrollstrukturen/CT_2.ipynb Zelle 1\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sterk/Documents/GitHub/ct_ws2023_students/vorlesung/02_VL_Kontrollstrukturen/CT_2.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Initialize Otter\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sterk/Documents/GitHub/ct_ws2023_students/vorlesung/02_VL_Kontrollstrukturen/CT_2.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39motter\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/sterk/Documents/GitHub/ct_ws2023_students/vorlesung/02_VL_Kontrollstrukturen/CT_2.ipynb#W0sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m grader \u001b[39m=\u001b[39m otter\u001b[39m.\u001b[39mNotebook(\u001b[39m\"\u001b[39m\u001b[39mcontrol-structures.ipynb\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/otter/check/utils.py:217\u001b[0m, in \u001b[0;36mlogs_event.<locals>.event_logger\u001b[0;34m(wrapped, self, args, kwargs)\u001b[0m\n\u001b[1;32m    215\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m    216\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_log_event(event_type, success\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, error\u001b[39m=\u001b[39me)\n\u001b[0;32m--> 217\u001b[0m     \u001b[39mraise\u001b[39;00m e\n\u001b[1;32m    219\u001b[0m \u001b[39mif\u001b[39;00m ret \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    220\u001b[0m     ret \u001b[39m=\u001b[39m LoggedEventReturnValue(\u001b[39mNone\u001b[39;00m)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/otter/check/utils.py:213\u001b[0m, in \u001b[0;36mlogs_event.<locals>.event_logger\u001b[0;34m(wrapped, self, args, kwargs)\u001b[0m\n\u001b[1;32m    208\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    209\u001b[0m \u001b[39mRuns a method, catching any errors and logging the call. Returns the unwrapped return value\u001b[39;00m\n\u001b[1;32m    210\u001b[0m \u001b[39mof the wrapped function.\u001b[39;00m\n\u001b[1;32m    211\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    212\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 213\u001b[0m     ret: Optional[LoggedEventReturnValue[T]] \u001b[39m=\u001b[39m wrapped(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[1;32m    215\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m    216\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_log_event(event_type, success\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, error\u001b[39m=\u001b[39me)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/otter/check/notebook.py:144\u001b[0m, in \u001b[0;36mNotebook.__init__\u001b[0;34m(self, nb_path, tests_dir, tests_url_prefix, colab, jupyterlite)\u001b[0m\n\u001b[1;32m    140\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_notebook \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_config[\u001b[39m\"\u001b[39m\u001b[39mnotebook\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m    142\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_notebook:\n\u001b[1;32m    143\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_nbmeta_config \u001b[39m=\u001b[39m NBMetadataConfig\u001b[39m.\u001b[39mfrom_notebook(\n\u001b[0;32m--> 144\u001b[0m         nbf\u001b[39m.\u001b[39mread(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_notebook, nbf\u001b[39m.\u001b[39mNO_CONVERT))\n\u001b[1;32m    145\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    146\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_nbmeta_config \u001b[39m=\u001b[39m NBMetadataConfig()\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/nbformat/__init__.py:168\u001b[0m, in \u001b[0;36mread\u001b[0;34m(fp, as_version, capture_validation_error, **kwargs)\u001b[0m\n\u001b[1;32m    166\u001b[0m     buf \u001b[39m=\u001b[39m fp\u001b[39m.\u001b[39mread()\n\u001b[1;32m    167\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m:\n\u001b[0;32m--> 168\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(fp, encoding\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m    169\u001b[0m         \u001b[39mreturn\u001b[39;00m reads(f\u001b[39m.\u001b[39mread(), as_version, capture_validation_error, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[1;32m    171\u001b[0m \u001b[39mreturn\u001b[39;00m reads(buf, as_version, capture_validation_error, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'control-structures.ipynb'"
+     ]
+    }
+   ],
    "source": [
     "# Initialize Otter\n",
     "import otter\n",
@@ -55,6 +75,31 @@
     " * While Schleifen\n",
     "\n",
     "Zur Beschreibung bzw. dem Entwurf von Programmen verwendet man sogenannte **Struktogramme** (Nassi-Shneiderman-Diagram oder ähnliche). [Wikipedia: Nassi-Shneiderman](https://de.wikipedia.org/wiki/Nassi-Shneiderman-Diagramm) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Herzlichen Glückwunsch! Sie haben 6 gewürfelt\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Beispiel\n",
+    "from random import randrange\n",
+    "\n",
+    "x = randrange(1, 7)\n",
+    "\n",
+    "if x == 6: # Kontrollanweisung (if) + Bedingung (x == 6)\n",
+    "    print(\"Herzlichen Glückwunsch! Sie haben 6 gewürfelt\")\n",
+    "else:\n",
+    "    print(f\"Sie haben {x} gewürfelt. Leider verloren.\")"
    ]
   },
   {
@@ -121,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,20 +269,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "hallo\n",
+      "welt\n"
+     ]
+    }
+   ],
    "source": [
-    "# str und list"
+    "# str und list\n",
+    "\n",
+    "#name =\"Bastian\"\n",
+    "\n",
+    "#for buchstabe in name:\n",
+    "    #print(buchstabe)\n",
+    "    \n",
+    "#liste2 = [1,2,3,4,\"hallo\",\"welt\"]\n",
+    "\n",
+    "for element in liste2:\n",
+    "    if element ==\"hallo\":\n",
+    "        for j in element:\n",
+    "            print(j)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2}\n",
+      "{3, 4}\n",
+      "{5, 6}\n",
+      "x: 1, y: 2\n",
+      "x: 3, y: 4\n",
+      "x: 5, y: 6\n"
+     ]
+    }
+   ],
    "source": [
-    "# fun with for"
+    "liste3 = [{1,2},{3,4},{5,6}]\n",
+    "liste3\n",
+    "\n",
+    "for koord in liste3:\n",
+    "    print(koord)\n",
+    "    \n",
+    "for k1,k2 in liste3:\n",
+    "    print(f\"x: {k1}, y: {k2}\")"
    ]
   },
   {
@@ -245,6 +335,36 @@
    "metadata": {},
    "source": [
     "Als statement wird *oft* (nicht immer) eine Folge von Zahlen angegeben. Dafür gibt es die **Standard-Funktion** `range(x)`: liefert eine Folge von Zahlen von 0 bis exklusive x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "bereich = list(range(1,10,2))\n",
+    "bereich\n",
+    "\n",
+    "for _ in range(10):\n",
+    "    print(_)"
    ]
   },
   {
@@ -300,12 +420,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H\n",
+      "a\n",
+      "l\n",
+      "l\n",
+      "o\n",
+      " \n",
+      "W\n"
+     ]
+    }
+   ],
    "source": [
     "# break\n",
-    "\n"
+    "\n",
+    "name = \"Hallo Welt\"\n",
+    "\n",
+    "for element in name:\n",
+    "    if element == \"e\":\n",
+    "        break\n",
+    "    print(element)"
    ]
   },
   {
@@ -317,12 +457,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H\n",
+      "a\n",
+      "l\n",
+      "l\n",
+      "o\n",
+      " \n",
+      "W\n",
+      "l\n",
+      "t\n"
+     ]
+    }
+   ],
    "source": [
     "# continue\n",
-    "\n"
+    "\n",
+    "name = \"Hallo Welt\"\n",
+    "\n",
+    "for element in name:\n",
+    "    if element == \"e\":\n",
+    "        continue\n",
+    "    print(element)"
    ]
   },
   {
@@ -476,6 +638,10 @@
    "outputs": [],
    "source": [
     "# Schreiben Sie ein Programm das den größten gemeinsamen Teiler bestimmt\n",
+    "\n",
+    "m = 15\n",
+    "n = 9\n",
+    "\n",
     "\n"
    ]
   },
@@ -539,7 +705,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.5"
   },
   "vscode": {
    "interpreter": {
