--- a/vorlesung/03_VL_Funktionen/CT_3.ipynb
+++ b/vorlesung/03_VL_Funktionen/CT_3.ipynb
@@ -11,6 +11,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "fea7c21a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kantenlängen: 4 und 10. Fläche 40\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 4\n",
+    "b = 10\n",
+    "area_rectangle = a * b\n",
+    "print(f\"Kantenlängen: {a} und {b}. Fläche {area_rectangle}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cfcab292",
    "metadata": {},
@@ -32,12 +53,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1a28c833",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# hint: implement it!"
+    "# hint: implement it!\n",
+    "\n",
+    "def f(x):\n",
+    "    return 2 * x + 3\n",
+    "\n",
+    "ergebnis = f(5)\n",
+    "ergebnis"
    ]
   },
   {
@@ -53,15 +91,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "8a82e971",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n",
+      "None\n",
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "# hint: non-pure function\n",
-    "def remove_last(mylist):\n",
-    "    pass\n",
+    "mylist = [1, 2, 3, 4]\n",
     "\n",
+    "def remove_last(mylist):\n",
+    "    del mylist[-1]\n",
+    "    \n",
+    "    \n",
+    "print(mylist)\n",
+    "print(remove_last(mylist))\n",
+    "print(mylist)\n",
     "# hint: print it, to show it"
    ]
   },
@@ -75,22 +129,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "f37a7274",
    "metadata": {},
    "outputs": [],
    "source": [
     "# hint: pure function\n",
     "def remove_last(mylist):\n",
-    "    pass "
+    "    kopie = mylist.copy()\n",
+    "    del kopie[-1]\n",
+    "    return kopie"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "59e2231a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mylist: [1, 2, 3]\n",
+      "returned_list: [1, 2]\n"
+     ]
+    }
+   ],
    "source": [
     "mylist = [1,2,3]\n",
     "returned_list = remove_last(mylist)\n",
@@ -122,11 +187,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "f475fb20",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "builtin_function_or_method"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "print(len(mylist))\n",
     "type(len)"
    ]
   },
@@ -153,21 +237,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c2cb690e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.        , 0.11111111, 0.22222222, 0.33333333, 0.44444444,\n",
+       "       0.55555556, 0.66666667, 0.77777778, 0.88888889, 1.        ])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy\n",
-    "numpy.linspace(0, 1, 10)"
+    "numpy.linspace(0, 1, 10)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "48930b15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "function"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(numpy.linspace)"
    ]
@@ -197,10 +304,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "225cb6cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def dddd(something, l):\n",
     "    \"\"\"\n",
@@ -220,10 +338,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "136aa581",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def subtract(x, y):\n",
     "    \"\"\"\n",
@@ -245,17 +374,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "2f7319e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 3)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# hint: implement it!\n",
     "def modulo(n, k):\n",
     "    \"\"\"\n",
     "    returns div, rest such that n = k * div + rest, where n, k, div, rest are whole numbers.\n",
     "    \"\"\"\n",
-    "    pass"
+    "    div = n // k\n",
+    "    rest = n % k\n",
+    "    return div, rest\n",
+    "\n",
+    "ergebnis = modulo(10,7)\n",
+    "print(ergebnis)\n",
+    "type(ergebnis)"
    ]
   },
   {
@@ -269,10 +422,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "31166d87",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "div, rest = modulo(10, 7)\n",
     "print(div)\n",
@@ -289,12 +451,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "63f49d82",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "def print42():\n",
     "    print('42')\n",
@@ -312,12 +483,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "4df622bc",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "def print42():\n",
     "    print('42')\n",
@@ -342,14 +522,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "d6781de2",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# hint: implement it (lrange)"
+    "# hint: implement it (lrange)\n",
+    "def lrange(stop,start = 0,step = 1):\n",
+    "    meineliste = list(range(start,stop,step))\n",
+    "    return meineliste\n",
+    "lrange(5)"
    ]
   },
   {
@@ -363,12 +558,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "9cba7c6e",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lrange(10)"
    ]
@@ -392,7 +598,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hint: show it"
+    "# hint: show it\n",
+    "help(range)"
    ]
   },
   {
@@ -546,10 +753,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "4a8aa9c2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "x = 2\n",
     "def printX():\n",
@@ -568,10 +783,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "ed1d9892",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'y' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/sterk/Documents/GitHub/ct_ws2023_students/vorlesung/03_VL_Funktionen/CT_3.ipynb Zelle 53\u001b[0m line \u001b[0;36m6\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sterk/Documents/GitHub/ct_ws2023_students/vorlesung/03_VL_Funktionen/CT_3.ipynb#Y102sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39mprint\u001b[39m(y)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sterk/Documents/GitHub/ct_ws2023_students/vorlesung/03_VL_Funktionen/CT_3.ipynb#Y102sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m printY()\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/sterk/Documents/GitHub/ct_ws2023_students/vorlesung/03_VL_Funktionen/CT_3.ipynb#Y102sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m y\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'y' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def printY():\n",
     "    y = 2\n",
@@ -591,10 +825,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "d1b8b8ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "z = 5\n",
     "def printZ():\n",
@@ -617,12 +869,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "75fe7451",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "z = 5\n",
     "#prints\n",
@@ -646,10 +916,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "39b8652d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "global z id: 4338247000\n"
+     ]
+    },
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "cannot access local variable 'z' where it is not associated with a value",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/sterk/Documents/GitHub/ct_ws2023_students/vorlesung/03_VL_Funktionen/CT_3.ipynb Zelle 59\u001b[0m line \u001b[0;36m9\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sterk/Documents/GitHub/ct_ws2023_students/vorlesung/03_VL_Funktionen/CT_3.ipynb#Y111sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mlokal z id (after lokal z is defined): \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mid\u001b[39m(z)\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sterk/Documents/GitHub/ct_ws2023_students/vorlesung/03_VL_Funktionen/CT_3.ipynb#Y111sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     \u001b[39mprint\u001b[39m(z)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/sterk/Documents/GitHub/ct_ws2023_students/vorlesung/03_VL_Funktionen/CT_3.ipynb#Y111sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m printZ()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/sterk/Documents/GitHub/ct_ws2023_students/vorlesung/03_VL_Funktionen/CT_3.ipynb#Y111sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m z\n",
+      "\u001b[1;32m/Users/sterk/Documents/GitHub/ct_ws2023_students/vorlesung/03_VL_Funktionen/CT_3.ipynb Zelle 59\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sterk/Documents/GitHub/ct_ws2023_students/vorlesung/03_VL_Funktionen/CT_3.ipynb#Y111sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mprintZ\u001b[39m():\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/sterk/Documents/GitHub/ct_ws2023_students/vorlesung/03_VL_Funktionen/CT_3.ipynb#Y111sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mlokal z id (before lokal z is defined): \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mid\u001b[39m(z)\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sterk/Documents/GitHub/ct_ws2023_students/vorlesung/03_VL_Funktionen/CT_3.ipynb#Y111sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     z \u001b[39m=\u001b[39m \u001b[39m42\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sterk/Documents/GitHub/ct_ws2023_students/vorlesung/03_VL_Funktionen/CT_3.ipynb#Y111sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mlokal z id (after lokal z is defined): \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mid\u001b[39m(z)\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: cannot access local variable 'z' where it is not associated with a value"
+     ]
+    }
+   ],
    "source": [
     "z = 5\n",
     "print(f'global z id: {id(z)}')\n",
@@ -673,10 +963,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "8282bba1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "global z id: 4338247000\n",
+      "lokal z id: 4338248184\n",
+      "42\n",
+      "\n",
+      "\n",
+      "global z id: 4338248184\n",
+      "global z id: 4338248184\n",
+      "42\n"
+     ]
+    }
+   ],
    "source": [
     "def printZ(z):\n",
     "    if z == 42:\n",
@@ -776,10 +1081,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "67844bdb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def subtract(x, y):\n",
     "    \"\"\"\n",
@@ -787,7 +1103,8 @@
     "    \"\"\"\n",
     "    return x - y\n",
     "z = 10\n",
-    "result = subtract(z, subtract(5,1))"
+    "result = subtract(z, subtract(5,1))\n",
+    "result"
    ]
   },
   {
@@ -866,7 +1183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
