--- a/vorlesung/11_dateioperationen.ipynb
+++ b/vorlesung/11_dateioperationen.ipynb
@@ -224,7 +224,18 @@
    "outputs": [],
    "source": [
     "def compute_statistics(numbers):\n",
-    "    count = [0] * 49"
+    "    count = [0]\n",
+    "    for n in range(49):\n",
+    "        count.append(0)\n",
+    "    for draw in numbers:\n",
+    "        for number in draw:\n",
+    "            count[number - 1] += 1\n",
+    "            \n",
+    "    probability = [(zahl / len(numbers) * 6)] for zahl in count\n",
+    "    return probability\n",
+    "    return count\n",
+    "\n",
+    "compute_statistics(numbers)"
    ]
   },
   {
@@ -256,12 +267,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# Beispiel zur Funktion index()\n",
     "values = [1, 2, 7, 4, 232]\n",
